--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
