--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-test-task",
+	"homepage": "https://Vitaly-FutureDeveloper.github.io/test_task_react.loc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,8 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
